--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/layout/ib_view_chat.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/layout/ib_view_chat.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
 
-    <org.infobip.mobile.messaging.chat.view.InAppChatWebView
+    <org.infobip.mobile.messaging.chat.core.widget.LivechatWidgetWebView
         android:id="@+id/ib_lc_web_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
