Pull request #482: Jdzubak MCA-4524 lc threads api
Merge in MML/infobip-mobile-messaging-android from jdzubak-MCA-4524-lc-threads-api to master

Squashed commit of the following:

commit 83220945c4c1692f4976ae2decfbfe9e559b88b1
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed Mar 19 13:49:31 2025 +0100

    MCA-4534 Fixed comments type

commit d618547e3d413fa2e85397420191eacbbe8e3689
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed Mar 19 13:09:05 2025 +0100

    MCA-4534 Lifecycle methods fix

commit 9683933cd487c6ae77c5703c6f5a462e12834ef2
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed Mar 19 09:04:30 2025 +0100

    MCA-4534 Imports revert

commit 6348a9bfc8b8b66a9b4b3b5b420be6b096610e4b
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Mar 18 13:17:04 2025 +0100

    MCA-4534 Delegation

commit 82fdfb096ec02bfbd3cb83d63fe0b3a968c583ff
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Mar 18 12:37:02 2025 +0100

    MCA-4534 Fixed issue in InAppChatActivityResultDelegate.kt

commit d87da94c82eb8f6b651f1568c070d53e32f24982
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Mar 17 15:18:46 2025 +0100

    MCA-4534 Added missing Fragment public functions

commit 6b987f5deab87f76a0e810e36661fd45a35dd68d
Merge: 326823af 67d7e09d
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Mar 17 14:39:14 2025 +0100

    MCA-4534 Merge master

commit 326823af18fa2bcd62c34051284fdc8f42d30faa
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Mar 17 13:43:46 2025 +0100

    MCA-4534 DefaultInAppChatErrorHandler

commit d162f281675e3fb0974a8623ba2c264da4777fa7
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Mar 17 13:38:45 2025 +0100

    MCA-4534 Added default implementations

commit 82d9e4ecede5a9b8632d7f2d340b7280a0e93f62
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Mar 17 12:10:59 2025 +0100

    MCA-4534 Small fix

commit 0b75d98e2b1a7841134467cf3b9dfbb98cb93949
Merge: 

--- a/infobip-mobile-messaging-android-demo/src/chatCommon/res/layout/activity_main.xml
+++ b/infobip-mobile-messaging-android-demo/src/chatCommon/res/layout/activity_main.xml
@@ -299,10 +299,21 @@
                     tools:visibility="visible"
                     android:checked="true"
                     android:text="@string/custom_button_enabled"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintBottom_toTopOf="@id/openWidgetApi"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/customButtonChecked"/>
+
+                <Button
+                    android:id="@+id/openWidgetApi"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/open_widget_api"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/enableCalls"
+                    />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
