--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values/styles.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values/styles.xml
@@ -69,7 +69,7 @@
     <style name="IB.Chat.Input.TextAppearance" parent="TextAppearance.MaterialComponents.Body1" />
     <!--    endregion-->
 
-    <!--    Internally used styles-->
+    <!--    region Internally used styles-->
     <style name="IB.Chat.Input.Button" parent="@style/Widget.AppCompat.ImageButton">
         <item name="android:layout_width">32dp</item>
         <item name="android:layout_height">32dp</item>
