Pull request #501: MCA-4669 InAppChat attachments config
Merge in MML/infobip-mobile-messaging-android from jdzubak-MCA-4669-chat-attachments-config to master

Squashed commit of the following:

commit cbc0599ec07af2252c689e54ed1fb1dbc536a671
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue May 27 10:40:16 2025 +0200

    MCA-4669 Removed deprecated conversion

commit 9f545b81caba818b33e59ec4ab9add9bdd953468
Merge: 736f1e36 82898502
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue May 27 10:35:06 2025 +0200

    Merge remote-tracking branch 'origin/master' into jdzubak-MCA-4669-chat-attachments-config

commit 736f1e36bc0241cb0acb62a0b4626766d3a6ab7b
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Thu May 22 13:08:39 2025 +0200

    MCA-4669 InAppChat attachments config

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/layout/ib_widget_bottom_sheet_chooser.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/layout/ib_widget_bottom_sheet_chooser.xml
@@ -14,7 +14,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
-        android:layout_margin="16dp" />
+        android:layout_margin="16dp"
+        android:visibility="gone"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/ib_lc_chooserList"
