Pull request #490: MCA-4444 Open Livechat notification on tap action handling
Merge in MML/infobip-mobile-messaging-android from jdzubak-MCA-4444-open-lc-on-tap-action to master

Squashed commit of the following:

commit 0aad27410bbf4686e25b89189e4e3ebecbffc2bf
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Fri May 30 09:31:29 2025 +0200

    MCA-4708 Updated doco

commit f5ea98fd6ae5f755ca0f2754878ba8ad1123a105
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Thu May 29 15:53:29 2025 +0200

    MCA-4708 InAppChatActivity handles initial message creation

commit 8498a6ce438b7c577aaade877e04c553724aec2a
Merge: 091543da 14debbe0
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Thu May 29 13:28:14 2025 +0200

    Merge remote-tracking branch 'refs/remotes/origin/master' into jdzubak-MCA-4444-open-lc-on-tap-action

commit 091543daf38bb27ae242d6cf8f846b6b6edc3618
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Thu May 29 13:27:57 2025 +0200

    MCA-4708 Updated parsing

commit 8fb02273573ec423791fb1fe07f6c9be06995e46
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed Apr 23 14:33:27 2025 +0200

    MCA-4444 Open Livechat notification on tap action handling

commit 77afdf9b030a7a9acd7329a69c69919e86972950
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed Apr 23 14:28:54 2025 +0200

    MCA-4444 Open Livechat notification on tap action handling

commit b3b8fdd549a4152a352ecdc15bcb42d445c716b4
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed Apr 23 09:38:13 2025 +0200

    MCA-4444 Open Livechat notification on tap action handling

commit b6dd8671bfb9cae9186c7b2e56181cf5911f598e
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed Apr 23 09:30:36 2025 +0200

    MCA-4444 Open Livechat notification on tap action handling

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/layout/ib_activity_chat.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/layout/ib_activity_chat.xml
@@ -4,10 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="org.infobip.mobile.messaging.chat.view.InAppChatActivity">
+    tools:context="org.infobip.mobile.messaging.chat.view.InAppChatActivity"
+    >
+
     <androidx.fragment.app.FragmentContainerView
-        android:name="org.infobip.mobile.messaging.chat.view.InAppChatFragment"
+        android:id="@+id/ib_in_app_chat_fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/ib_in_app_chat_fragment" />
+        />
 </RelativeLayout>
