Pull request #550: MCA-5057 new char counter input
Merge in MML/infobip-mobile-messaging-android from mtokar-MCA-5057-char-counter to master

Squashed commit of the following:

commit 401c2108682a3dfcea3e25fdbbfad80ca5ccf6f1
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed Dec 3 16:10:46 2025 +0100

    MCA-5057 Review fix

commit 2bcaf5051e1a7fa1c83f1a02b5407c2a3d67f6a1
Author: Matus Tokar <Matus.Tokar@infobip.com>
Date:   Wed Dec 3 11:46:41 2025 +0100

    review fixes

commit 737d1c98bc2e2ba9155d5d0a0f02bde8f952c008
Author: Matus Tokar <Matus.Tokar@infobip.com>
Date:   Mon Dec 1 13:00:34 2025 +0100

    review fixes 2

commit e02aa1e6651feb574473aad84a2a35bd6f10a3dd
Author: Matus Tokar <Matus.Tokar@infobip.com>
Date:   Mon Dec 1 12:54:13 2025 +0100

    review fixes 2

commit 2dbbe03325bf8b4ba67008cf96ac3e3ef622185d
Author: Matus Tokar <Matus.Tokar@infobip.com>
Date:   Thu Nov 27 16:48:11 2025 +0100

    review fixes 2

commit 1b0d8bc533fb656084c0d1172eb3bb0125e93e10
Author: Matus Tokar <Matus.Tokar@infobip.com>
Date:   Thu Nov 27 11:46:29 2025 +0100

    review fixes

commit 518401302a6d32ab9098e88142d0ad8500e72a36
Author: Matus Tokar <Matus.Tokar@infobip.com>
Date:   Wed Nov 26 11:25:17 2025 +0100

    new char counter input

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/layout/ib_view_chat_input.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/layout/ib_view_chat_input.xml
@@ -19,36 +19,48 @@
         android:background="@color/ib_chat_hint_text_color"
         app:layout_constraintTop_toTopOf="parent"/>
 
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/messageInputLayout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="6dp"
+        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
+        app:counterEnabled="false"
+        app:counterMaxLength="4096"
+        app:boxBackgroundMode="none"
+        app:hintEnabled="false"
+        app:layout_constraintStart_toEndOf="@id/attachmentButton"
+        app:layout_constraintEnd_toStartOf="@id/sendButton"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/messageInput"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:enabled="true"
+            android:importantForAutofill="no"
+            android:maxLines="5"
+            android:minLines="1"
+            android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
+            android:scrollbars="vertical"
+            android:textSize="16sp"
+            android:textIsSelectable="true"
+            android:gravity="start|center_vertical"
+            android:paddingVertical="8dp"
+            tools:text="Send message..." />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
     <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/attachmentButton"
         style="@style/IB.Chat.Input.Button"
         android:enabled="false"
         app:srcCompat="@drawable/ib_chat_attachment_btn_icon"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/messageInput"
-        app:layout_constraintBottom_toBottomOf="@id/messageInput"/>
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/messageInput"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="6dp"
-        android:background="@android:color/transparent"
-        android:enabled="true"
-        android:importantForAutofill="no"
-        android:maxLines="5"
-        android:minLines="1"
-        android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
-        android:minHeight="30dp"
-        android:scrollbars="vertical"
-        android:textSize="16sp"
-        android:textIsSelectable="true"
-        android:gravity="start|center_vertical"
-        app:layout_constraintStart_toEndOf="@id/attachmentButton"
-        app:layout_constraintEnd_toStartOf="@id/sendButton"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:text="Send message..."/>
+        app:layout_constraintTop_toTopOf="@id/messageInputLayout"
+        app:layout_constraintBottom_toBottomOf="@id/messageInputLayout" />
 
     <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/sendButton"
@@ -56,7 +68,7 @@
         android:enabled="false"
         app:srcCompat="@drawable/ib_chat_send_btn_icon"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/messageInput"
-        app:layout_constraintBottom_toBottomOf="@id/messageInput"/>
+        app:layout_constraintTop_toTopOf="@id/messageInputLayout"
+        app:layout_constraintBottom_toBottomOf="@id/messageInputLayout" />
 
 </merge>
