Pull request #557: mtokar-MCA-5050-improved-error-screen
Merge in MML/infobip-mobile-messaging-android from mtokar-MCA-5050-improved-error-screen to master

Squashed commit of the following:

commit 950737471802fa97ac42143e99368462dc25ec43
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Thu Jan 8 10:41:28 2026 +0100

    MCA-5152 Added KDOC

commit 958bfff8540afb465f1dff5d34014e510dddd597
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Thu Jan 8 09:34:42 2026 +0100

    MCA-5152 Review + fixes

commit fdc1351fc739900b649bde49f4a5531b97a628cd
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Thu Jan 8 08:46:57 2026 +0100

    MCA-5152 Review + fixes

commit 9f028c6c4853b5f570995c908da70c77d14610fc
Author: Matus Tokar <Matus.Tokar@infobip.com>
Date:   Wed Dec 31 15:27:21 2025 +0100

    customization error view, new connection banner

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/layout/ib_view_error.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/layout/ib_view_error.xml
@@ -10,10 +10,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:focusable="true"
-    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
+    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout"
+    android:background="@color/ib_chat_error_background"
+    >
 
     <ImageView
-        android:id="@+id/ib_error_view_image"
+        android:id="@+id/ib_lc_error_view_image"
         android:layout_width="0dp"
         android:layout_height="200dp"
         android:layout_marginStart="32dp"
@@ -28,7 +30,7 @@
         app:layout_constraintVertical_bias="0.30" />
 
     <TextView
-        android:id="@+id/ib_error_view_title"
+        android:id="@+id/ib_lc_error_view_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -36,39 +38,38 @@
         android:layout_marginEnd="8dp"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
-        android:textColor="@color/ib_chat_text_color"
+        android:textColor="@color/ib_chat_error_title_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ib_error_view_image"
+        app:layout_constraintTop_toBottomOf="@id/ib_lc_error_view_image"
         android:gravity="center"
-        tools:text="Title" />
+        android:text="@string/ib_chat_error"
+        />
 
     <TextView
-        android:id="@+id/ib_error_view_desc"
+        android:id="@+id/ib_lc_error_view_desc"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ib_error_view_title"
-        android:gravity="center"
-        tools:text="Description" />
+        app:layout_constraintTop_toBottomOf="@id/ib_lc_error_view_title"
+        android:textColor="@color/ib_chat_error_description_text"
+        android:text="@string/ib_chat_error_description"
+        android:gravity="center"/>
 
-    <ImageButton
-        android:id="@+id/ib_error_view_action_btn"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:padding="8dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/ib_chat_refresh_icon"
-        app:tint="@color/ib_chat_text_color"
-        app:layout_constraintTop_toBottomOf="@id/ib_error_view_desc"
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/ib_lc_error_view_action_btn"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/ib_chat_refresh"
+        android:textColor="@color/ib_chat_error_action_button_text"
+        app:layout_constraintTop_toBottomOf="@id/ib_lc_error_view_desc"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintVertical_bias="0.2"
-        />
+        app:layout_constraintVertical_bias="0.2"/>
 
 </merge>
