--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/layout/ib_view_chat.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/layout/ib_view_chat.xml
@@ -6,50 +6,51 @@
   Copyright (c) 2016-2025 Infobip Limited
   Licensed under the Apache License, Version 2.0
 -->
-<merge
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout"
+    >
 
     <org.infobip.mobile.messaging.chat.core.widget.LivechatWidgetWebView
         android:id="@+id/ib_lc_web_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="invisible" />
+        android:visibility="invisible"
+        />
 
     <ProgressBar
         android:id="@+id/ib_lc_spinner"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
+    <org.infobip.mobile.messaging.chat.view.NetworkConnectionErrorView
+        android:id="@+id/ib_lc_connection_error"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:visibility="visible" />
-
-    <TextView
-        android:id="@+id/ib_lc_connection_error"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingVertical="4dp"
-        app:layout_constraintBottom_toTopOf="parent"
-        android:background="@android:color/darker_gray"
-        android:gravity="center_horizontal|center_vertical"
-        android:textColor="@android:color/black"
-        android:textSize="16sp"
         android:visibility="invisible"
-        android:text="@string/ib_chat_no_connection" />
+        tools:visibility="visible"
+        />
 
     <org.infobip.mobile.messaging.chat.view.ErrorView
         android:id="@+id/ib_lc_error_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:visibility="gone"
-        tools:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible"
+        />
 
 </merge>
